# fastapi-react-fullstack-CRUD

./: README.md  database.sql
antd-pro/: package.json
antd-pro/config/: config.dev.ts  defaultSettings.ts  routes.ts
antd-pro/src/locales/: en-US.ts  zh-CN.ts
antd-pro/src/services/: base.ts  index.ts
backend/: README.md  config.py  environment.yaml  pyproject.toml  requirements.txt
backend/api/: deps.py
backend/api/v1/: apis.py  common.py  project.py  project_tender.py  role.py  user.py
backend/common/: custom_exc.py
backend/core/: security.py  server.py
backend/crud/: __init__.py  crudInstance.py  menu.py  role.py
backend/db/: init_db.py
backend/models/: business.py  user.py
backend/schemas/: __init__.py
backend/schemas/request/: menu.py  project.py  role.py  user.py
backend/schemas/response/: resp.py
backend/services/: userService.py  utils.py
backend/tests/: test_Casbin.py  test_UserService.py
fast-server-api/: .gitignore  README.md  casbin_model.conf  develop.env  main.py
fast-server-api/common/: casbin.py  logger.py  sys_broadcast.py  sys_redis.py
fast-server-api/crud/: base.py  project.py  user.py
fast-server-api/db/: session.py
fast-server-api/models/: __init__.py
fast-server-api/services/: projectService.py  roleService.py
fast-server-api/tests/: pytest.md  test_ChatService.py  test_Project.py  test_db.py
fast-server-api/utils/: tool_func.py
frontend/: .eslintrc.js  package.json
frontend/config/: config.ts  proxy.ts
frontend/mock/: notices.ts  role.ts  user.ts
frontend/src/: app.tsx  global.tsx
(+37 files in other folders)
